# Signal-FTS5-Extension

./: Cargo.toml
resources/: lindera_ipadic_conf.json
src/: common.rs  extension.rs  lib.rs
